# chip8

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: chip8.cpp  chip8.hpp  main.cpp
